# MagicPick

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
android/: AndroidManifest.xml.in  MainActivity.java  build_apk.sh  run.sh  setup_raylib.sh
ios/: Info.plist.in  setup_vendor.sh
ios/patches/: rcore_ios_main_landscape.patch
src/: chord_system.cpp  chord_system.h  enemy.cpp  enemy.h  ios_audio_stub.cpp  main.cpp  player.cpp  player.h  touch_controls.cpp  touch_controls.h
